--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath "com.android.tools.build:gradle:4.2.1"
         classpath 'com.novoda:bintray-release:0.8.1'
 //        classpath 'com.android.tools.build:gradle:2.2.0'
         // NOTE: Do not place your application dependencies here; they belong
