--- a/light/build.gradle
+++ b/light/build.gradle
@@ -10,10 +10,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-//        ndk {
+        ndk {
 //            abiFilters 'armeabi-v7a', 'armeabi'
-//            abiFilters 'armeabi-v7a', 'armeabi','x86'
-//        }
+            abiFilters 'arm64-v8a'
+        }
     }
 
     buildTypes {
